mydaemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mydaemonset
  #labels:
spec:
  selector:
    matchLabels:
      app: mydaemonset
template:
  metadata:
    labels:  
      app: mydaemonset
  spec:
    containers:
    - name: nginx
      image: nginx:1.19.1
