newdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: newdep
        labels:
                app: newdep
spec:
        replicas: 3
        selector:
                matchLabels:
                        app: newdep
        template:
                metadata:
                        labels: newdep
                spec:
                        containers:
                        - name: nginx
                          ports:
                          - containerPort:
                                  image: nginx:1.19.1
