pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: mypod
    image: busybox
    command: ['sh', '-c','echo success >> /output/succes.txt']
    volumeMounts:
      mountPath: /output
  volumes:
  - name: pv-vol
    persitentVolumeClaim:
      claimName: my-pvc
