pod-vol.yaml
apiVersion: v1
kind: Pod
spec:
  containers:
  - name: busybox
    image: busybox
    volumeMounts:
    - name: my-volume
      mountPath: /output
  - name: alpine
    image: alpine-con
    volumeMounts:
    - name: my-volume
      mountPath: /home
  volumes:
  - name: my-volume
    hostPath:
      path: /data
  - name: my-volume2
    emptyDir: {}
