nodeport-svc.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: mynodeport-svc
spec:
  selector:
    apps: myapp
  type: NodePort
  ports:
  - protocol: tcp
    target: 80
    port: 80
    nodePort: 30080
