service1.yaml
apiVersion: apps/v1
kind: Service
metadata: 
  name: my-service
spec:
  type: clusterIp
  selector:
    apps: myapp
  ports:
  -  protocol: tcp
     targetPort: 80
     port: 80
