userbd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: user-db
spec:
  ports:
  - port: 80
    protocol: tcp
    targetPort: 80
  selector:
    app: user-db
status:
  loadBalancer: {}
