webfe-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: web-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wbfe
  type: nodeport
status:
  loadBalancer: {}
