ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account
  namespace: accounts
spec:
  rules:
  - host: accounts.svc
    http:
      paths:
      - backend:
          service:
            name: svc1
            port:
              number: 80
        path: /bar
        pathType: Exact
  tls:
  - hosts:
    - accounts.svc
    secretName: account-tls-secrets
